    armel/{ixp4xx,orion5x}) (Closes: #728975, #736843)
  * [x86] Enable R8188EU as module, 88EU_AP_MODE and 88EU_P2P (Closes: #736905)
  * [x86] Enable I2C_DESIGNWARE_PLATFORM as module (Closes: #737163)
  * [x86] snd-pcsp: Disable autoload (Closes: #697709)
  * DFSG: Remove the af9005 initialisation script and vs6624 driver again
    (they were renamed in 3.7)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 23 Jan 2014 15:05:08 +0000

linux (3.13-1~exp1) experimental; urgency=low

  * New upstream release: http://kernelnewbies.org/Linux_3.13

  [ Ben Hutchings ]
  * [armhf] xen/pci: Fix build on non-x86
  * [hppa/parisc64-smp] Disable MLONGCALLS (Closes: #733897)
  * [armel] Remove iop32x flavour (fixes FTBFS)
  * aufs: Update to aufs3.x-rcN-20140120
    - bugfix, removed /proc/PID/fd/N

  [ Bastian Blank ]
  * Initial Python 3 support:
    - Build-depend on python-six.

  [ Aurelien Jarno ]
  * [mipsel] Remove cobalt d-i files.
  * [mipsel] Enable KEXEC like on mips.
  * [mipsel] Explicitly unset RAPIDIO like on mips. 

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 20 Jan 2014 05:43:51 +0000

linux (3.13~rc6-1~exp1) experimental; urgency=low

  * New upstream release candidate

  [ Ben Hutchings ]
  * [rt] Disable until it is updated for 3.13 or later
  * aufs: Update to aufs3.x-rcN-20131223
  * [x86] staging: lustre: Make LUSTRE_LLITE_LLOOP tristate
  * mm: Enable MEM_SOFT_DIRTY, NUMA_BALANCING but not
    NUMA_BALANCING_DEFAULT_ENABLED
  * ipv6: Enable IPV6_VTI as module
  * netfilter: Enable NF_TABLES, NFT_EXTHDR, NFT_META, NFT_CT, NFT_RBTREE,
    NFT_HASH, NFT_COUNTER, NFT_LOG, NFT_LIMIT, NFT_NAT, NFT_COMPAT,
    IP_SET_HASH_NETPORTNET, IP_SET_HASH_NETNET, IP_NF_TARGET_SYNPROXY,
    IP6_NF_TARGET_SYNPROXY as modules
  * net/sched: Enable NET_CLS_BPF as module
  * nfc: Enable NFC_DIGITAL, NFC_PORT100 as modules
  * block: Enable BLK_DEV_NULL_BLK, BLK_DEV_SKD as modules
  * SCSI: Enable SCSI_ESAS2R as module
  * net/usb: Enable USB_NET_HUAWEI_CDC_NCM as module