@@ -537,13 +537,17 @@ if (! defined $ARGV[1] || ! $ARGV[1] || $ARGV[1] =~ m/<unknown>/o) {
   }
 }
 else {
-  if (! -e "$kimage") {
+  lstat($kimage);
+  if (! -e _) {
     handle_missing_link($kimage, $image_dest, "$kimage-$version", 
                         $realimageloc);
   }
-  if ($initrd && ! -e "initrd.img") {
-    handle_missing_link("initrd.img", $image_dest, "initrd.img-$version",
-			$realimageloc);
+  if ($initrd) {
+    lstat("initrd.img");
+    if (! -e _) {
+      handle_missing_link("initrd.img", $image_dest, "initrd.img-$version",
+			  $realimageloc);
+    }
   }
 }
 
