@@ -13,6 +13,8 @@ linux (3.13.2-1~exp1) UNRELEASED; urgency=low
   * [x86] snd-pcsp: Disable autoload (Closes: #697709)
   * DFSG: Remove the af9005 initialisation script and vs6624 driver again
     (they were renamed in 3.7)
+  * linux-image.postinst: Use lstat() to check symlink existence
+    (Closes: #738707)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 23 Jan 2014 15:05:08 +0000
 
